--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <form action="#" method="get">
             <div class="main">
-                <label>CEP: <br><input type="text" id="cep" placeholder="Digite Aqui"><br><small>Ex: 123456-123</small></label><br>
+                <h2 id="title">Digite Seu CEP:</h2>
+                <label>CEP: <br><input type="text" id="cep" placeholder="Digite Aqui" maxlength="9"><br><small>Ex: 123456-123</small></label><br>
                 <button onclick="pesquisar()" id="pesquisa">Pesquisar</button>
                 <button onclick="limpar()" id="limpa">Limpar</button>
             </div>
